[GStreamer] media/media-can-play-mp3.html fails https://bugs.webkit.org/show_bug.cgi?id=216692

Patch by Philippe Normand <pnormand@igalia.com> on 2020-09-21
Reviewed by Darin Adler.

Add mp3 to supported codecs map when a valid decoder has been
found by the GStreamer registry scanner.

* platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::initialize):

Canonical link: https://commits.webkit.org/229556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267335 268f45cc-cd09-0410-ab3c-d52691b4dbfc